<resources>
    <string name="app_name">PictureShare</string>
    <string name="register">新用户注册</string>
    <string name="find_password">找回密码</string>
    <string name="text_hint_username">username</string>
    <string name="text_hint_password">password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_profile">我的</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="upload">上传</string>
    <string name="select_picture_hint">选择图片</string>
    <string name="upload_hint">上传</string>
    <string name="create_account_hint">CREATE ACCOUNT</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="input_password_hint">Password</string>
    <string name="input_account_hint">Account</string>
    <string name="register_hint">REGISTER</string>
    <string name="input_username_hint">UserName</string>
</resources>